
  From Kevin Quick:

  - Fix the Builder name returned from ListBuilders and other instances
    of subclasses of the BuilderBase class.

  - Add Builders and construction variables to support rpcgen:
    RPCGenClient(), RPCGenHeader(), RPCGenService(), RPCGenXDR(),
    $RPCGEN, $RPCGENFLAGS, $RPCGENCLIENTFLAGS, $RPCGENHEADERFLAGS,
    $RPCGENSERVICEFLAGS, $RPCGENXDRFLAGS.

  - Provide more info in the error message when a user tries to build
    a target multiple ways.

  - Fix Delete() when a file doesn't exist and must_exist=1.  (We were
    unintentionally dependent on a bug in versions of the Python shutil.py
    module prior to Python 2.3, which would generate an exception for
    a nonexistent file even when ignore_errors was set.)

  - Only replace a Node's builder with a non-null source builder.

  From Christoph Wiedemann:

  - Add an Environment.SetDefault() method that only sets values if
    they aren't already set.

  - Have the qt.py Tool not override variables already set by the user.

  - Add separate $QT_BINPATH, $QT_CPPPATH and $QT_LIBPATH variables
    so these can be set individually, instead of being hard-wired
    relative to $QTDIR.

  - The %TEMP% and %TMP% external environment variables are now propagated
    automatically to the command execution environment on Windows systems.

  - A new --config= command-line option allows explicit control of
    of when the Configure() tests are run:  --config=force forces all
    checks to be run, --config=cache uses all previously cached values,
    --config=auto (the default) runs tests only when dependency analysis
    determines it's necessary.

  - The Configure() subsystem can now write a config.h file with values
    like HAVE_STDIO_H, HAVE_LIBM, etc.

  - The Configure() subsystem now executes its checks silently when the
    -Q option is specified.

  - The Configure() subsystem now reports if a test result is being
    taken from cache, and prints the standard output and error output