@@ -59,6 +59,9 @@ RELEASE 0.97 - XXX
     $RPCGEN, $RPCGENFLAGS, $RPCGENCLIENTFLAGS, $RPCGENHEADERFLAGS,
     $RPCGENSERVICEFLAGS, $RPCGENXDRFLAGS.
 
+  - Update the man page to document that prefix and suffix Builder
+    keyword arguments can be strings, callables or dictionaries.
+
   - Provide more info in the error message when a user tries to build
     a target multiple ways.
 
@@ -68,6 +71,9 @@ RELEASE 0.97 - XXX
     a nonexistent file even when ignore_errors was set.)
 
   - Only replace a Node's builder with a non-null source builder.
+
+  - Fix a stack trace when a suffix selection dictionary is passed
+    an empty source file list.
 
   From Christoph Wiedemann:
 
